# robit_intern_NGM

./: LICENSE  README.md
C++&qt/day2/: 여기다가과제보고서
C++&qt/day2/hw1/: hw_01.cpp  hw_01.hpp
C++&qt/day2/hw2/: hw_02.cpp  hw_02.hpp
C++&qt/day2/hw3/: asdasdsdsdad  hw_03.cpp  hw_03.hpp
C++&qt/qt_project/: gamewidget.cpp  mainwindow.cpp  mainwindow.h
Linux/day3/hw_01/hw_01_package/test1/: CMakeLists.txt
Linux/day3/hw_01/hw_01_package/test1/include/: mainwindow.h
Linux/day3/hw_01/hw_01_package/test1/src/: main.cpp  mainwindow.cpp
Linux/day3/hw_01/hw_01_package/test1/ui/: mainwindow.ui
Linux/day3/hw_02/hw_02_package/hw02/: CMakeLists.txt
Linux/day3/hw_02/hw_02_package/hw02/include/: mainwindow.h
Linux/day3/hw_02/hw_02_package/hw02/src/: mainwindow.cpp
Linux/day3/hw_02/hw_02_package/hw02/ui/: mainwindow.ui
Linux/day4(udptcu)/hw01/hw_01_package/hw_01/: mainwindow.cpp  mainwindow.ui
Linux/day4(udptcu)/hw_01_package/hw_01/: CMakeLists.txt  mainwindow.h
Linux/day4/hw1/hw_package/hw_01/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Linux/day4/hw3/hw3_package/hw_02/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Linux/day4/hw3/hw_03_package/hw_03/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Linux/qt_project/qt_project_package/qt_project/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Linux/qt_project/qt_project_package/qtproject/: CMakeLists.txt  gamewidget.cpp  gamewidget.h  gamewidget.ui  homescreen.cpp  homescreen.h  homescreen.ui  mainwindow.cpp  mainwindow.h
ROS/day1/hw1/colcon_ws/: 명령어.txt
ROS/day1/hw1/colcon_ws/src/my_first_ros_rclcpp_pkg/: CMakeLists.txt  package.xml
ROS/day1/hw1/colcon_ws/src/my_first_ros_rclcpp_pkg/src/: my_cpp_node.cpp
ROS/day1/hw2/hw2_package/: listener.cpp  listener.py  publisher.cpp  publisher.py  suscriber.cpp
ROS/day1/hw3/hw3_package/: turtle_steering.cpp  turtle_steering.py
ROS/day2/: gpt_link
ROS/day2/hw1/custom_interfaces/: CMakeLists.txt  package.xml
ROS/day2/hw1/custom_interfaces/msg/: AddTwoInts.msg
ROS/day2/hw1/hw_01/: CMakeLists.txt  package.xml
ROS/day2/hw1/hw_01/include/hw_01/: main_window.hpp  qnode.hpp
ROS/day2/hw1/hw_01/install/: local_setup.sh  setup.sh
ROS/day2/hw1/hw_01/install/share/hw_01/: package.bash  package.zsh
ROS/day2/hw1/hw_01/src/: main.cpp  main_window.cpp  publisher.cpp  qnode.cpp  subscriber.cpp
ROS/day2/hw1/hw_01/ui/: MainWindow.ui
ROS/day2/hw2/hw_02/: CMakeLists.txt  package.xml
ROS/day2/hw2/hw_02/include/hw_02/: main_window.hpp  qnode.hpp
ROS/day2/hw2/hw_02/src/: main.cpp  main_window.cpp  qnode.cpp
ROS/day2/hw2/hw_02/ui/: mainwindow.ui
ROS/day2/hw3/hw_03/: CMakeLists.txt  package.xml
ROS/day2/hw3/hw_03/include/hw_03/: main_window.hpp  qnode.hpp
ROS/day2/hw3/hw_03/resources/: images.qrc
ROS/day2/hw3/hw_03/src/: main.cpp  main_window.cpp  qnode.cpp
ROS/day2/hw3/hw_03/ui/: mainwindow.ui
ROS/day2/hw4/: arm_state.txt
ROS/day2/hw4/hw_04/: CMakeLists.txt  package.xml
ROS/day2/hw4/hw_04/include/hw_04/: qnode.hpp
ROS/day2/hw4/hw_04/src/: main_window.cpp  qnode.cpp
ROS/day2/hw4/hw_04/ui/: mainwindow.ui
ROS/day3/hw1/hw_01/src/: hw_01.cpp
ROS/day3/hw2/hw_01/: package.xml
ROS/day3/hw2/hw_01/launch/: hw01_turtlesim.launch.py
ROS/day3/hw2/hw_04/config/: arm_params.yaml
ROS/day3/hw2/hw_04/include/hw_04/: main_window.hpp
ROS/day3/hw2/hw_04/launch/: hw_all.launch.py
ROS/day3/hw2/hw_04/src/: qnode.cpp
ROS/day4/hw1/packages_preliminary_version/hw_01_publisher/: CMakeLists.txt  package.xml
ROS/day4/hw1/packages_preliminary_version/hw_01_publisher/src/: publisher.cpp
ROS/day4/hw1/packages_preliminary_version/hw_01_service_client/src/: service_client.cpp
ROS/day4/hw1/packages_preliminary_version/hw_01_subscriber/src/: subscriber.cpp
ROS/day4/hw1/packages_v2/hw_01_publisher/src/: publisher.cpp
ROS/day4/hw1/packages_v2/hw_01_service_client/: CMakeLists.txt  package.xml
ROS/day4/hw1/packages_v2/hw_01_service_client/src/: service_client.cpp
ROS/day4/hw1/packages_v2/hw_01_subscriber/: CMakeLists.txt  package.xml
ROS/day4/hw1/packages_v2/hw_01_subscriber/src/: subscriber.cpp
