<?xml version="1.0"?>
<package format="3">
  <name>hw_01</name>
  <version>0.0.1</version>
  <description>Vector pub/sub with Qt GUI</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>custom_interfaces</depend>

  <exec_depend>qtbase5-dev</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
