<?xml version="1.0"?>
<package format="3">
  <name>hw_04</name>
  <version>0.0.1</version>
  <description>ROS 2 + Qt Widgets sample</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>custom_interfaces</depend>

  <exec_depend>qtbase5-dev</exec_depend>
  <exec_depend>qtbase5-dev-tools</exec_depend>

  <export/>
</package>
