<?xml version="1.0"?>
<package format="3">
  <name>hw_01_service_client</name>
  <version>0.0.1</version>
  <description>Lifecycle orchestrator for talker/listener</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>lifecycle_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>