<?xml version="1.0"?>
<package format="3">
  <name>hw_01_subscriber</name>
  <version>0.0.1</version>
  <description>Lifecycle subscriber</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
